# xgrib_pi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.circleci/: config.yml
build-deps/: macos-deps
ci/: Dockerfile.jammy  Dockerfile.linux  build-linux-catalogue.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-jammy.sh  circleci-build-macos-universal.sh  circleci-build-ubuntu-docker.sh  circleci-build-windows.ps1  circleci-test-windows-opencpn.ps1  control  deploy-alpha-artifacts.sh  diagnose-windows-generator.ps1  install-debian-build-deps.sh  test-windows-opencpn-runtime.ps1  validate-before-push-windows.ps1  windows-vcpkg-deps.txt
ci/vcpkg-overlay-ports/libaec/: portfile.cmake  vcpkg.json
cmake/: BundleGeneratorRuntime.cmake.in  BundleMacGeneratorRuntime.cmake.in  BundledJasper.cmake  PluginConfigure.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake
cmake/in-files/: cloudsmith-upload.sh.in  flatpak_extra_modules.in  flatpak_options.in  org.opencpn.OpenCPN.Plugin.yaml.in
data/: THIRD_PARTY_NOTICES.md
docs/: alpha-validation.md  architecture.md  catalogue-release.md  deterministic-merge-validation.md  xtd-format-v1.md  xtd-format-v2.md
include/: EnvironmentalGribDialog.h
libs/manual/src/: manual.cpp
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  xgrib_pi.pot
scripts/: build-matrix-report.sh  collect-build-artifacts.sh  make-local-catalogue.sh  resolve-package-pair.sh  run-functional-merge-test.sh  test-catalogue-archive.sh  test-flatpak-archive.sh  test-packaged-helper.sh  validate-before-push.sh
src/: CustomGrid.cpp  EnvironmentalGribDialog.cpp  EnvironmentalGribDialog.h  GeneratorJobJson.cpp  GeneratorJobJson.h  GribDisplayGeometry.h  GribOverlayFactory.cpp  GribOverlayFactory.h  GribProtocolVersion.h  GribReader.cpp  GribRecord.cpp  GribRecord.h  GribRequestDialog.cpp  GribSettingsDialog.cpp  GribSettingsDialog.h  GribTable.cpp  GribUIDialog.cpp  GribUIDialog.h  GribUIDialogBase.cpp  GribUIDialogBase.h  GribV2Record.cpp  GribV2Record.h  GribVectorPolicy.cpp  GribVectorPolicy.h  ProcessCommand.cpp  ProcessCommand.h  XgribPaths.cpp  XgribPaths.h  XgribPluginPolicy.cpp  XgribPluginPolicy.h  grib_pi.cpp  grib_pi.h  icons.sh  pi_gl.h  zuFile.cpp  zuFile.h
test/: EnvironmentalGribDialogContract.cmake  GeneratorJobJsonTests.cpp  GribDisplayGeometryTests.cpp  PackageSelectionTests.sh  PluginVersionContract.cmake  ProcessCommandTests.cpp  PublicationContract.cmake  SelectedFilePathContract.cmake  WindowsRuntimeContract.cmake  WindowsSplitAbiContract.cmake  XgribPluginPolicyTests.cpp  XgribReaderIntegrationTests.cpp
test/fixtures/: corrupt.grb  current-differing.grb  current-incompatible-area.grb  current-incompatible-time.grb  current-matching.grb  fixture-manifest.json  wind-known.grb2
